# computer-use-agent

./: .env  .env.example  .gitignore  main.py  memory.db  pyproject.toml  test_files.py  test_memory.py
harness/: cases.py  cases_cdp.py  runner.py
scripts/: backfill_embeddings.py  check_cdp.py  launch_chrome_cdp.bat  launch_chrome_cdp.sh  spotify_login.py  tune_similarity_threshold.py
src/: actions.py  brain.py  config.py  desktop_app.py  graph.py  llm_backends.py  memory.py  models.py  registry.py  screen.py  state.py  verifier.py  voice.py  wakeword.py
src/gui_assets/: app.js  index.html  style.css
src/tools/: __init__.py  apps.py  browser.py  files.py  ocr.py  spotify_auth.py  vision.py  windows_ui.py
tests/: test_apps.py  test_brain.py  test_browser.py  test_files.py  test_memory.py  test_ocr.py  test_vision.py  test_windows_ui.py
