[project]
name = "computer-use-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai==2.8.0",
    "langgraph==1.2.4",
    "pillow==12.2.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "pyautogui==0.9.54",
    "pycaw>=20230407",
    "pyperclip>=1.8.2",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.2.2",
    "pywin32>=306",
    "uiautomation>=2.0.18",
]
