[project]
name = "computer-use-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai==2.8.0",
    "langgraph==1.2.4",
    "pillow==12.2.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "pyautogui==0.9.54",
    "pycaw>=20230407",
    "pyperclip>=1.8.2",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.2.2",
    "pywin32>=306",
    "requests>=2.31.0",
    "uiautomation>=2.0.18",
]

[project.optional-dependencies]
# Phase 8 — Voice + Hotkey Trigger. Only needed if VOICE_ENABLED=true.
# Install with: pip install -e .[voice]
voice = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "pynput>=1.7.6",
    "pystray>=0.19.5",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26.0",
    "pytest-benchmark>=5.1.0",
    "pytest-codspeed>=4.0.0",
    "pytest-recording>=0.13.0",
    "pytest-socket>=0.7.0",
    "syrupy>=4.9.0",
    "Faker>=38.0.0",
]